@@ -5,7 +5,7 @@ Description: A WordPress Framework Theme ... the first work. It works first. Des
 Version: 1.3.1
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
-WordPress Required Version: 3.8
+WordPress Required Version: 4.1
 WordPress Tested Version: 4.1
 Tags: black, white, gray, light, one-column, two-columns, three-columns, right-sidebar, responsive-layout, fluid-layout, custom-background, custom-header, custom-menu, featured-images, flexible-header, post-formats, sticky-post, threaded-comments
 Text Domain: opusprimus
